<resources>
    <string name="app_name">IN9ja</string>
    <string name="SCORE">score</string>
    <string name="_0">0</string>
    <string name="questions">questions</string>
    <string name="score">SCORE</string>
    <string name="in9ja">in9ja</string>
    <string name="play">PLAY</string>
    <string name="option">OPTION</string>
    <string name="music">MUSIC</string>
    <string name="sfx">SFX</string>
    <string name="quit">QUIT</string>
    <string name="get_started">Get Started</string>
    <string name="in9ja2">In9Ja2</string>

</resources>
